// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PersonQuoteCover /> should render with default props 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="image"
      data-testid="background-image"
    />
    <div
      class="overlay"
      data-testid="gradient-overlay"
    />
    <div
      class="contentContainer"
    >
      <blockquote
        class="quote"
        data-testid="quote"
      >
        <p>
          Airbyte has cut &lt;b&gt;months of man hours off&lt;/b&gt; of our ELT pipeline development and delivered usable data to us in hours instead of weeks. We are excited for the future of Airbyte, enthusiastic about their approach, and optimistic about our future together.
        </p>
      </blockquote>
      <img
        alt=""
        class="companyLogo"
        data-testid="quote-company-logo"
        src="/images/testimonials/cartdotcom-logo.svg"
      />
      <div>
        <h5
          class="quoteAuthorFullName"
          data-testid="quote-author-full-name"
        >
          Micah Mangione
        </h5>
        <h3
          class="quoteAuthorJobTitle"
          data-testid="quote-author-job-title"
        >
          Director of Technology
        </h3>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<PersonQuoteCover /> should render with default props and without background image 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="image"
      data-testid="background-image"
      style="background-image: none;"
    />
    <div
      class="overlay"
      data-testid="gradient-overlay"
    />
    <div
      class="contentContainer"
    >
      <blockquote
        class="quote"
        data-testid="quote"
      >
        <p>
          Airbyte has cut &lt;b&gt;months of man hours off&lt;/b&gt; of our ELT pipeline development and delivered usable data to us in hours instead of weeks. We are excited for the future of Airbyte, enthusiastic about their approach, and optimistic about our future together.
        </p>
      </blockquote>
      <img
        alt=""
        class="companyLogo"
        data-testid="quote-company-logo"
        src="/images/testimonials/cartdotcom-logo.svg"
      />
      <div>
        <h5
          class="quoteAuthorFullName"
          data-testid="quote-author-full-name"
        >
          Micah Mangione
        </h5>
        <h3
          class="quoteAuthorJobTitle"
          data-testid="quote-author-job-title"
        >
          Director of Technology
        </h3>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<PersonQuoteCover /> should render with overridden props 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="image"
      data-testid="background-image"
      style="background-image: url(/image.png);"
    />
    <div
      class="overlay"
      data-testid="gradient-overlay"
      style="background: blue;"
    />
    <div
      class="contentContainer"
    >
      <blockquote
        class="quote"
        data-testid="quote"
        style="font-size: 30px;"
      >
        <p>
          This is test text
        </p>
      </blockquote>
      <img
        alt=""
        class="companyLogo"
        data-testid="quote-company-logo"
        src="/new-logo.svg"
      />
      <div>
        <h5
          class="quoteAuthorFullName"
          data-testid="quote-author-full-name"
          style="color: black; font-size: 40px;"
        >
          Micah Mangione
        </h5>
        <h3
          class="quoteAuthorJobTitle"
          data-testid="quote-author-job-title"
          style="color: red; font-size: 50px;"
        >
          Director of Technology
        </h3>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
